Update concepts section

--- a/docs/concepts/agent-response-format.mdx
+++ b/docs/concepts/agent-response-format.mdx
@@ -1,4 +1,4 @@
-# Format of Agent's Response
+# Agent Response Format
 
 **Agent responses** are the streamed output of the agent runs. Since Ailoy is
 designed to stream output on-the-fly, each part of the response can be treated
