--- a/docs/concepts/architecture.mdx
+++ b/docs/concepts/architecture.mdx
@@ -1,21 +1,23 @@
-import BrokerVMRuntimeImage from "./img/broker-vm-runtime.svg";
+import ArchitectureImg from "./img/architecture.svg";
 
 # Architecture
 
-## Message Broker
+## In a Nutshell
 
-Ailoy aims to enable production-level LLM execution with minimal boilerplate across a wide range of programming languages and environments.
-To achieve this, Ailoy is structured around a modular, message-driven architecture composed of three core components: **Runtime**, **Broker**, and **VM**.
-It is architected with the aim of achieving flexibility, portability, and performance.
+Ailoy aims to enable performant LLM execution with minimal boilerplate across a wide range of programming languages and environments.
+To achieve this, it is structured around a modular, message-driven architecture composed of three core components: **Runtime**, **Broker**, and **VM**.
 
 <p align="center">
-  <BrokerVMRuntimeImage style={{ width: "80%", height: "80%" }} />
+  <ArchitectureImg style={{ width: "80%", height: "80%" }} />
 </p>
 
 ### Runtime
 
-The `Runtime` serves as the user-facing interface for a specific programming language.
+The `Runtime` serves as the user-facing interface.
 It defines the public API and manages all interactions between the user and the internal components of the system.
+
+To ensure seamless integration across diverse development environments, each `Runtime` is designed to follow the idiomatic conventions and best practices of its target programming language.
+This allows developers to interact with Ailoy in a way that feels natural and intuitive, without having to inspect an internal architecture.
 
 #### Responsibilities
 
@@ -34,8 +36,12 @@ It defines the public API and manages all interactions between the user and the 
 
 ### Broker
 
-The `Broker` handles message delivery, routing, and protocol abstraction.
-It sits between the `Runtime` and the `VM`, managing communications and message dispatching.
+The Broker implements Ailoy’s internal message broker system.
+It sits between the Runtime and the VM, managing communication and dispatching messages between them.
+
+Ailoy currently uses an in-process communication model for minimal overhead and maximum performance.
+This implementation is based on a local network system, allowing fast and efficient message delivery between components within the same device.
+However, the underlying architecture is designed to be easily extended to support remote communication protocols, such as TCP, enabling cross-machine scenarios.
 
 #### Responsibilities
 
@@ -69,32 +75,36 @@ To support this, we are implementing portable `VM` backends across a variety of 
 - *wasm32-emscripten-unknown (planned)*
 - to be added
 
-All communication with the `VM` is strictly mediated through the Broker.
+## Module System
 
-## Module system
+In Ailoy's architecture, the VM is responsible for computing and returning results for incoming requests.
+It must be capable of executing a wide range of functions, including LLM inference, deep learning modules, and various utility operations.
+The number of functions supported by the VM is expected to grow continuously as new capabilities are introduced.
+Additionally, the VM should support user-defined tasks as plug-ins, enabling developers to extend its functionality without modifying the core library.
+These two requirements—supporting a growing set of functions and enabling extensibility through plug-ins—are fundamental to the design of the VM.
 
-In Ailoy's architecture, the VM is responsible for computing and returning results for given tasks.
-To support this functionality effectively, the VM is expected to meet the following requirements:
+To address these requirements, Ailoy adopts a module-based VM system.
+This design allows the VM to dynamically load task-specific modules and invoke the functions defined within them.
+Conceptually, a `Module` can be thought of as a package, similar to those found in many modern programming languages.
 
-1. It must be capable of executing a wide variety of functions, with the expectation that the number of supported functions will grow continuously.
-2. It should support user-defined tasks as plug-ins, enabling extensibility without requiring core modifications.
+| **Entity** | **Description** |
+| --- | --- |
+| **VM** | The runtime environment where task execution takes place |
+| **Module** | The executable logic that defines how tasks are performed within the VM |
 
-To address these needs, Ailoy adopts a module-based VM system.
-This system allows the VM to dynamically load task-specific modules and invoke functions defined within them.
-Conceptually, a module can be thought of as a package, as commonly seen in many programming languages.
+Each module consists of two types of sub-entities: operators and components.
+An operator is a stateless function that executes immediately when invoked with input and returns a result.
+In contrast, a component is a stateful instance that produces an output based on both its internal state and the given input.
+Roughly speaking, operators are analogous to functions, while components resemble class instances in traditional programming.
 
-- VM: The actual runtime environment where task execution takes place
-- Module: The executable logic that defines how tasks are performed within the VM
+| **Entity** | **Description** |
+| --- | --- |
+| **Operator** | A stateless function. Takes input and returns a result. |
+| **Component Type** | A class-like definition that can be instantiated by VM when it imports a module. |
+| **Component** | A runtime instance. Maintains internal state and produces output based on input and it's state. |
 
-Each module in Ailoy consists of two types of sub-entities:
-
-- Operator: A stateless function. When invoked with input, it executes immediately and returns a result.
-- Component: A stateful instance. When invoked, it produces an output based on both its internal state and the given input.
-
-Roughly speaking, operators are analogous to *functions*, while components resemble *class instances* in computer programming.
-
-### Operator
-
-### Component & ComponentType
-
-### Module
+Conceptually, a module can be thought of as a package, similar to those found in many modern programming languages.
+Each module consists of two types of sub-entities: operators and component types (also referred to as component factories).
+Some may wonder why a module consists of component types instead of just components.
+In Ailoy, components are not instantiated at module load time; rather, they are explicitly created by the user by sending a define_component-type packet.
+It is analogous to how packages work in most programming languages—when a package is imported, it typically exposes class definitions rather than class instances, and provides access to their constructors so that users can instantiate them as needed.
