--- a/docs/tutorial/integrate-with-mcp.mdx
+++ b/docs/tutorial/integrate-with-mcp.mdx
@@ -40,8 +40,8 @@ and registers them into its internal toolset.
 
 ### Querying via MCP Tools
 
-Once the tools are registered, the agent can invoke them naturally through its
-`query()` method:
+Once the tools are registered, the agent can invoke them as needed when you 
+call the query() method:
 
 <CodeTabs>
 
@@ -118,11 +118,3 @@ import { startRuntime, createAgent } from "ailoy-node";
 ```
 
 </CodeTabs>
-
-{/* prettier-ignore-start */}
-
-:::note
-This example assumes that Node.js and npx are available in your environment.
-:::
-
-{/* prettier-ignore-end */}
