--- a/docs/tutorial/using-tools.mdx
+++ b/docs/tutorial/using-tools.mdx
@@ -120,7 +120,7 @@ the API’s URL, HTTP method, and headers.
 {/* prettier-ignore-start */}
 
 :::info
-For more details about tool definitions, see the [Tools](../tools) section.
+For more details about tool definitions, see the [Tools](../concepts/tools) section.
 :::
 
 {/* prettier-ignore-end */}
