--- a/docs/api-references/low-level-runtime-apis.mdx
+++ b/docs/api-references/low-level-runtime-apis.mdx
@@ -1,6 +1,15 @@
 # Low-level Runtime APIs
 
-## Primitive Value Types
+## Introduction
+
+### Primitive Value Types
+
+Low-level API requests in Ailoy are made using a JSON-like object as the input argument.
+The key difference from standard JSON is that binary values can also be included.
+
+In Ailoy, you do not need to manually construct this object. Default types in Python and JavaScript are automatically converted into the appropriate internal representation when a request is sent.
+
+The table below summarizes how types in Python and JavaScript are mapped:
 
 | Name    | Python          | Javascript          |
 | ------- | --------------- | ------------------- |
@@ -15,49 +24,28 @@
 | map     | `Dict`          | `object`            |
 | ndarray | `numpy.ndarray` | `TypedArray`        |
 
-## Component Types
+### Iterative output
 
-### ⚡ Instant operators / methods
+In Ailoy, function outputs are designed to be iterable by default.
+A function may produce output either as a single response or as a sequence of multiple packets. The runtime continues to emit packets until it encounters a packet with the field finish: true.
+If the function completes in one response, that single packet will include `finish: true`.
+If the function produces multiple outputs, each packet will be yielded in order, and only the final one will have `finish: true`.
 
-### ⏩ Iterative operators / methods
-
-### 📦 Components
+In this documentation, the flag **`iterative: true`** indicates that the function may return **multiple output packets**.
+When using such a function, users must consume the output using an iterator loop (e.g., `for` or `async for`) to ensure all packets are handled.
+On the other hand, if **`iterative`** is set to false, the function is guaranteed to produce its entire output in a single packet.
+In this case, it is safe to call the function as a regular method and consume the result directly, without iteration.
 
 ---
 
-## `default` module
+## `http_request`
 
-### ⚡ `echo`
+- Type: **Function**
+- Module: `default`
 
-**Parameters**
+Sends an HTTP(S) request to the specified URL and returns the response.
 
-| Name   | Type   | Description  | Required |
-| ------ | ------ | ------------ | -------- |
-| `text` | string | text to echo | ✅       |
-
-**Outputs**
-
-| Name   | Type   | Description |
-| ------ | ------ | ----------- |
-| `text` | string | text echoed |
-
-### ⏩ `spell`
-
-**Parameters**
-
-| Name   | Type   | Description   | Required |
-| ------ | ------ | ------------- | -------- |
-| `text` | string | text to spell | ✅       |
-
-**Outputs**
-
-| Name   | Type   | Description  |
-| ------ | ------ | ------------ |
-| `text` | string | text spelled |
-
-### ⚡ `http_request`
-
-**Parameters**
+#### Parameters
 
 | Name      | Type   | Description                                         | Required |
 | --------- | ------ | --------------------------------------------------- | -------- |
@@ -66,7 +54,7 @@
 | `headers` | map    | request headers                                     |          |
 | `body`    | string | request body                                        |          |
 
-**Outputs**
+#### Outputs
 
 | Name          | Type  | Description      |
 | ------------- | ----- | ---------------- |
@@ -74,112 +62,95 @@
 | `headers`     | map   | response headers |
 | `body`        | bytes | response body    |
 
-### ⚡ `calculator`
+`iterative`: **`false`**
 
-**Parameters**
+## `calculator`
+
+- Type: **Function**
+- Module: `default`
+
+A simple calculator function.
+
+#### Parameters
 
 | Name         | Type   | Description                 | Required |
 | ------------ | ------ | --------------------------- | -------- |
 | `expression` | string | expression to be calculated | ✅       |
 
-**Outputs**
+#### Outputs
 
 | Name    | Type   | Description        |
 | ------- | ------ | ------------------ |
 | `value` | double | calculation result |
 
-### 📦 `accumulator`
-
-**Parameters**
-
-| Name   | Type   | Description | Required |
-| ------ | ------ | ----------- | -------- |
-| `base` | string | base string | ✅       |
-
-**Methods**
-
-- #### ⚡ `get`
-
-  **Parameters**
-
-  None
-
-  **Outputs**
-
-  | Name   | Type   | Description          |
-  | ------ | ------ | -------------------- |
-  | `text` | string | current string value |
-
-- #### ⚡ `put`
-
-  **Parameters**
-
-  | Name | Type   | Description      | Required |
-  | ---- | ------ | ---------------- | -------- |
-  | `s`  | string | string to append | ✅       |
-
-  **Outputs**
-
-  None
-
-- #### ⚡ `count`
-
-  **Parameters**
-
-  None
-
-  **Outputs**
-
-  | Name    | Type | Description                          |
-  | ------- | ---- | ------------------------------------ |
-  | `count` | uint | number of `put`s being called so far |
+`iterative`: **`false`**
 
 ---
 
-## `language` module
+## `tvm_embedding_model`
 
-### 📦 `tvm_embedding_model`
+- Type: **Component**
+- Module: `language`
 
-**Parameters**
+Defines an on-device embedding model using TVM as the provider.
+
+#### Parameters
 
 | Name           | Type   | Description                                                                        | Required |
 | -------------- | ------ | ---------------------------------------------------------------------------------- | -------- |
 | `model`        | string | Model name to use.<br/>Available values: `BAAI/bge-m3` (defaults to `BAAI/bge-m3`) |          |
 | `quantization` | string | Quantization method.<br/>Available values: `q4f16_1` (defaults to `q4f16_1`)       |          |
 
-**Methods**
+### `tvm_embedding_model.infer`
 
-- #### ⚡ `infer`
+- Type: **Method**
+- Component: `tvm_embedding_model`
 
-  **Parameters**
+Performs inference using the embedding model.
 
-  | Name     | Type   | Description                     | Required |
-  | -------- | ------ | ------------------------------- | -------- |
-  | `prompt` | string | input text to perform embedding | ✅       |
+#### Parameters
 
-  **Outputs**
+| Name     | Type   | Description                     | Required |
+| -------- | ------ | ------------------------------- | -------- |
+| `prompt` | string | input text to perform embedding | ✅       |
 
-  | Name        | Type    | Description                  |
-  | ----------- | ------- | ---------------------------- |
-  | `embedding` | ndarray | result embedding (1-d array) |
+#### Outputs
 
-- #### ⚡ `tokenize`
+| Name        | Type    | Description                  |
+| ----------- | ------- | ---------------------------- |
+| `embedding` | ndarray | result embedding (1-d array) |
 
-  **Parameters**
+`iterative`: **`false`**
 
-  | Name     | Type   | Description                        | Required |
-  | -------- | ------ | ---------------------------------- | -------- |
-  | `prompt` | string | input text to perform tokenization | ✅       |
+### `tvm_embedding_model.tokenize`
 
-  **Outputs**
+- Type: **Method**
+- Component: `tvm_embedding_model`
 
-  | Name     | Type         | Description   |
-  | -------- | ------------ | ------------- |
-  | `tokens` | array\<int\> | result tokens |
+Performs tokenization on the input text and returns a list of tokens (input of deep learning).
 
-### 📦 `tvm_language_model`
+#### Parameters
 
-**Parameters**
+| Name     | Type   | Description                        | Required |
+| -------- | ------ | ---------------------------------- | -------- |
+| `prompt` | string | input text to perform tokenization | ✅       |
+
+#### Outputs
+
+| Name     | Type         | Description   |
+| -------- | ------------ | ------------- |
+| `tokens` | array\<int\> | result tokens |
+
+`iterative`: **`false`**
+
+## `tvm_language_model`
+
+- Type: **Component**
+- Module: `language`
+
+Defines an on-device language model using TVM as the provider.
+
+#### Parameters
 
 | Name           | Type   | Description                                                                                                     | Required |
 | -------------- | ------ | --------------------------------------------------------------------------------------------------------------- | -------- |
@@ -187,261 +158,375 @@
 | `quantization` | string | Quantization method.<br/>Available values: `q4f16_1` (defaults to `q4f16_1`)                                    |          |
 | `mode`         | string | Mode to initialize the model<br/>Available values: `interactive`, `local`, `server` (defaults to `interactive`) |          |
 
-**Methods**
+### `tvm_language_model.apply_chat_template`
 
-- #### ⚡ `apply_chat_template`
+- Type: **Method**
+- Component: `tvm_language_model`
 
-  **Parameters**
+Format inputs by it's model type.
 
-  | Name               | Type                   | Description                                  | Required |
-  | ------------------ | ---------------------- | -------------------------------------------- | -------- |
-  | `messages`         | array\<map\>           | array of messages (OpenAI API compatible)    | ✅       |
-  | `tools`            | array\<map\> or string | tools to be used (defaults to empty string)  |          |
-  | `enable_reasoning` | bool                   | flag to enable reasoning (defaults to false) |          |
+#### Parameters
 
-  **Outputs**
+| Name               | Type                   | Description                                  | Required |
+| ------------------ | ---------------------- | -------------------------------------------- | -------- |
+| `messages`         | array\<map\>           | array of messages (OpenAI API compatible)    | ✅       |
+| `tools`            | array\<map\> or string | tools to be used (defaults to empty string)  |          |
+| `enable_reasoning` | bool                   | flag to enable reasoning (defaults to false) |          |
 
-  | Name     | Type   | Description   |
-  | -------- | ------ | ------------- |
-  | `prompt` | string | result prompt |
+#### Outputs
 
-- #### ⏩ `infer`
+| Name     | Type   | Description   |
+| -------- | ------ | ------------- |
+| `prompt` | string | result prompt |
 
-  **Parameters**
+`iterative`: **`false`**
 
-  | Name                        | Type                   | Description                                                | Required |
-  | --------------------------- | ---------------------- | ---------------------------------------------------------- | -------- |
-  | `messages`                  | array\<map\>           | array of messages (OpenAI API compatible)                  | ✅       |
-  | `tools`                     | array\<map\> or string | tools to be used (defaults to empty string)                |          |
-  | `enable_reasoning`          | bool                   | flag to enable reasoning (defaults to false)               |          |
-  | `ignore_reasoning_messages` | bool                   | ignore reasoning messages from outputs (defaults to false) |          |
+### `tvm_language_model.infer`
 
-  **Outputs**
+- Type: **Method**
+- Component: `tvm_language_model`
 
-  | Name            | Type           | Description                                                                   |
-  | --------------- | -------------- | ----------------------------------------------------------------------------- |
-  | `message`       | map            | result message from this iteration                                            |
-  | `finish_reason` | string or null | finished reason.<br/>Available values: `stop`, `tool_call`, `length`, `error` |
+Performs inference, generates outputs.
 
-### 📦 `openai`
+#### Parameters
 
-**Parameters**
+| Name                        | Type                   | Description                                                | Required |
+| --------------------------- | ---------------------- | ---------------------------------------------------------- | -------- |
+| `messages`                  | array\<map\>           | array of messages (OpenAI API compatible)                  | ✅       |
+| `tools`                     | array\<map\> or string | tools to be used (defaults to empty string)                |          |
+| `enable_reasoning`          | bool                   | flag to enable reasoning (defaults to false)               |          |
+| `ignore_reasoning_messages` | bool                   | ignore reasoning messages from outputs (defaults to false) |          |
+
+#### Outputs
+
+| Name            | Type           | Description                                                                   |
+| --------------- | -------------- | ----------------------------------------------------------------------------- |
+| `message`       | map            | result message from this iteration                                            |
+| `finish_reason` | string or null | finished reason.<br/>Available values: `stop`, `tool_call`, `length`, `error` |
+
+`iterative`: **`true`**
+
+## `openai`
+
+- Type: **Component**
+- Module: `language`
+
+A `tvm_language_model` compatible using the OpenAI API, an LLM component.
+
+#### Parameters
 
 | Name      | Type   | Description                                                      | Required |
 | --------- | ------ | ---------------------------------------------------------------- | -------- |
 | `api_key` | string | API key to use on inference                                      | ✅       |
 | `model`   | string | Model name<br/>Available values: `gpt-4o` (defaults to `gpt-4o`) |          |
 
-**Methods**
+### `openai.infer`
 
-- #### ⚡ `infer`
+- Type: **Method**
+- Component: `openai`
 
-  **Parameters**
+Performs inference, generates outputs.
 
-  | Name       | Type         | Description                                 | Required |
-  | ---------- | ------------ | ------------------------------------------- | -------- |
-  | `messages` | array\<map\> | array of messages (OpenAI API compatible)   | ✅       |
-  | `tools`    | array\<map\> | tools to be used (defaults to empty string) |          |
+#### Parameters
 
-  **Outputs**
+| Name       | Type         | Description                                 | Required |
+| ---------- | ------------ | ------------------------------------------- | -------- |
+| `messages` | array\<map\> | array of messages (OpenAI API compatible)   | ✅       |
+| `tools`    | array\<map\> | tools to be used (defaults to empty string) |          |
 
-  | Name            | Type   | Description                                                                   |
-  | --------------- | ------ | ----------------------------------------------------------------------------- |
-  | `message`       | map    | result message                                                                |
-  | `finish_reason` | string | finished reason.<br/>Available values: `stop`, `tool_call`, `length`, `error` |
+#### Outputs
 
-### 📦 `faiss_vector_store`
+| Name            | Type   | Description                                                                   |
+| --------------- | ------ | ----------------------------------------------------------------------------- |
+| `message`       | map    | result message                                                                |
+| `finish_reason` | string | finished reason.<br/>Available values: `stop`, `tool_call`, `length`, `error` |
 
-**Parameters**
+`iterative`: **`false`**
+
+## `faiss_vector_store`
+
+- Type: **Component**
+- Module: `language`
+
+A vector store component using Faiss as the provider.
+
+#### Parameters
 
 | Name        | Type | Description            | Required |
 | ----------- | ---- | ---------------------- | -------- |
 | `dimension` | uint | Dimension of the index | ✅       |
 
-**Methods**
+### `faiss_vector_store.insert`<a name="faiss_vector_store.insert"></a>
 
-- #### ⚡ `insert`<a name="faiss_vector_store.insert"></a>
+- Type: **Method**
+- Component: `faiss_vector_store`
 
-  **Parameters**
+Inserts a single embedding into the vector store along with its associated document and optional metadata.
 
-  | Name        | Type        | Description                                                         | Required |
-  | ----------- | ----------- | ------------------------------------------------------------------- | -------- |
-  | `embedding` | ndarray     | embedding to insert                                                 | ✅       |
-  | `document`  | string      | original document corresponding to embedding                        | ✅       |
-  | `metadata`  | map or null | arbitrary key-value pairs with JSON-serializable (defaults to null) |          |
+#### Parameters
 
-  **Outputs**
+| Name        | Type        | Description                                                         | Required |
+| ----------- | ----------- | ------------------------------------------------------------------- | -------- |
+| `embedding` | ndarray     | embedding to insert                                                 | ✅       |
+| `document`  | string      | original document corresponding to embedding                        | ✅       |
+| `metadata`  | map or null | arbitrary key-value pairs with JSON-serializable (defaults to null) |          |
 
-  | Name | Type   | Description                         |
-  | ---- | ------ | ----------------------------------- |
-  | `id` | string | Unique identifier of the added item |
+#### Outputs
 
-- #### ⚡ `insert_many`
+| Name | Type   | Description                         |
+| ---- | ------ | ----------------------------------- |
+| `id` | string | Unique identifier of the added item |
 
-  **Parameters**
+`iterative`: **`false`**
 
-  | Name    | Type         | Description                                                         | Required |
-  | ------- | ------------ | ------------------------------------------------------------------- | -------- |
-  | `items` | array\<map\> | array of objects with [`insert`](#faiss_vector_store.insert) inputs | ✅       |
+### `faiss_vector_store.insert_many`
 
-  **Outputs**
+- Type: **Method**
+- Component: `faiss_vector_store`
 
-  | Name  | Type            | Description                                                     |
-  | ----- | --------------- | --------------------------------------------------------------- |
-  | `ids` | array\<string\> | Unique identifiers of the added items (same order with `items`) |
+Inserts multiple embeddings into the vector store in a batch. Each item must follow the same format as in insert.
 
-- #### ⚡ `get_by_id`
+#### Parameters
 
-  **Parameters**
+| Name    | Type         | Description                                                         | Required |
+| ------- | ------------ | ------------------------------------------------------------------- | -------- |
+| `items` | array\<map\> | array of objects with [`insert`](#faiss_vector_store.insert) inputs | ✅       |
 
-  | Name | Type   | Description                       | Required |
-  | ---- | ------ | --------------------------------- | -------- |
-  | `id` | string | Unique identifier of item to find | ✅       |
+#### Outputs
 
-  **Outputs**
+| Name  | Type            | Description                                                     |
+| ----- | --------------- | --------------------------------------------------------------- |
+| `ids` | array\<string\> | Unique identifiers of the added items (same order with `items`) |
 
-  | Name        | Type    | Description                         |
-  | ----------- | ------- | ----------------------------------- |
-  | `id`        | string  | Unique identifier of the found item |
-  | `embedding` | ndarray | Embedding of the found item         |
-  | `document`  | string  | Document of the found item          |
-  | `metadata`  | map     | Metadata of the found item          |
+`iterative`: **`false`**
 
-- #### ⚡ `retrieve`
+### `faiss_vector_store.get_by_id`
 
-  **Parameters**
+- Type: **Method**
+- Component: `faiss_vector_store`
 
-  | Name              | Type   | Description                           | Required |
-  | ----------------- | ------ | ------------------------------------- | -------- |
-  | `query_embedding` | string | Embedding for query message           | ✅       |
-  | `top_k`           | uint   | Number of results to retrieve at most | ✅       |
+Retrieves a stored item by its unique identifier, returning the embedding, document, and metadata.
 
-  **Outputs**
+#### Parameters
 
-  | Name      | Type         | Description                                                                                                                                                                                                                                                     |
-  | --------- | ------------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-  | `results` | array\<map\> | Retrieved results where each item consists of<br/>`id`(string): Unique identifier of the item<br/>`document`(string): Document of the item<br/>`metadata`(map or null): Metadata of the item<br/>`similarity`(float): cosine similarity between query embedding |
+| Name | Type   | Description                       | Required |
+| ---- | ------ | --------------------------------- | -------- |
+| `id` | string | Unique identifier of item to find | ✅       |
 
-- #### ⚡ `remove`
+#### Outputs
 
-  **Parameters**
+| Name        | Type    | Description                         |
+| ----------- | ------- | ----------------------------------- |
+| `id`        | string  | Unique identifier of the found item |
+| `embedding` | ndarray | Embedding of the found item         |
+| `document`  | string  | Document of the found item          |
+| `metadata`  | map     | Metadata of the found item          |
 
-  | Name | Type   | Description                         | Required |
-  | ---- | ------ | ----------------------------------- | -------- |
-  | `id` | string | Unique identifier of item to remove | ✅       |
+`iterative`: **`false`**
 
-  **Outputs**
+### `faiss_vector_store.retrieve`
 
-  None
+- Type: **Method**
+- Component: `faiss_vector_store`
 
-- #### ⚡ `clear`
+Searches for the most similar items to the given query embedding. Returns the top-k results along with similarity scores.
 
-  **Parameters**
+#### Parameters
 
-  None
+| Name              | Type   | Description                           | Required |
+| ----------------- | ------ | ------------------------------------- | -------- |
+| `query_embedding` | string | Embedding for query message           | ✅       |
+| `top_k`           | uint   | Number of results to retrieve at most | ✅       |
 
-  **Outputs**
+#### Outputs
 
-  None
+| Name      | Type         | Description                                                                                                                                                                                                                                                     |
+| --------- | ------------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| `results` | array\<map\> | Retrieved results where each item consists of<br/>`id`(string): Unique identifier of the item<br/>`document`(string): Document of the item<br/>`metadata`(map or null): Metadata of the item<br/>`similarity`(float): cosine similarity between query embedding |
 
-### 📦 `chromadb_vector_store`
+`iterative`: **`false`**
 
-**Parameters**
+### `faiss_vector_store.remove`
+
+Removes a stored item from the vector store by its unique identifier.
+
+- Type: **Method**
+- Component: `faiss_vector_store`
+
+#### Parameters
+
+| Name | Type   | Description                         | Required |
+| ---- | ------ | ----------------------------------- | -------- |
+| `id` | string | Unique identifier of item to remove | ✅       |
+
+#### Outputs
+
+None
+
+`iterative`: **`false`**
+
+### `faiss_vector_store.clear`
+
+- Type: **Method**
+- Component: `faiss_vector_store`
+
+Clears all items from the vector store.
+
+#### Parameters
+
+None
+
+#### Outputs
+
+None
+
+`iterative`: **`false`**
+
+## `chromadb_vector_store`
+
+- Type: **Component**
+- Module: `language`
+
+A vector store backed by ChromaDB as the underlying storage and retrieval engine.
+
+#### Parameters
 
 | Name         | Type   | Description                                               | Required |
 | ------------ | ------ | --------------------------------------------------------- | -------- |
 | `url`        | string | URL of the chromadb server                                | ✅       |
 | `collection` | string | Collection name to use (defaults to `default_collection`) |          |
 
-**Methods**
+#### `chromadb_vector_store.insert`<a name="faiss_vector_store.insert"></a>
 
-- #### ⚡ `insert`<a name="faiss_vector_store.insert"></a>
+- Type: **Method**
+- Component: `chromadb_vector_store`
 
-  **Parameters**
+Inserts a single embedding into the vector store along with its associated document and optional metadata.
 
-  | Name        | Type        | Description                                                         | Required |
-  | ----------- | ----------- | ------------------------------------------------------------------- | -------- |
-  | `embedding` | ndarray     | embedding to insert                                                 | ✅       |
-  | `document`  | string      | original document corresponding to embedding                        | ✅       |
-  | `metadata`  | map or null | arbitrary key-value pairs with JSON-serializable (defaults to null) |          |
+#### Parameters
 
-  **Outputs**
+| Name        | Type        | Description                                                         | Required |
+| ----------- | ----------- | ------------------------------------------------------------------- | -------- |
+| `embedding` | ndarray     | embedding to insert                                                 | ✅       |
+| `document`  | string      | original document corresponding to embedding                        | ✅       |
+| `metadata`  | map or null | arbitrary key-value pairs with JSON-serializable (defaults to null) |          |
 
-  | Name | Type   | Description                         |
-  | ---- | ------ | ----------------------------------- |
-  | `id` | string | Unique identifier of the added item |
+#### Outputs
 
-- #### ⚡ `insert_many`
+| Name | Type   | Description                         |
+| ---- | ------ | ----------------------------------- |
+| `id` | string | Unique identifier of the added item |
 
-  **Parameters**
+### `chromadb_vector_store.insert_many`
 
-  | Name    | Type         | Description                                                         | Required |
-  | ------- | ------------ | ------------------------------------------------------------------- | -------- |
-  | `items` | array\<map\> | array of objects with [`insert`](#faiss_vector_store.insert) inputs | ✅       |
+Inserts multiple embeddings into the vector store in a batch. Each item must follow the same format as in insert.
 
-  **Outputs**
+- Type: **Method**
+- Component: `chromadb_vector_store`
 
-  | Name  | Type            | Description                                                     |
-  | ----- | --------------- | --------------------------------------------------------------- |
-  | `ids` | array\<string\> | Unique identifiers of the added items (same order with `items`) |
+#### Parameters
 
-- #### ⚡ `get_by_id`
+| Name    | Type         | Description                                                         | Required |
+| ------- | ------------ | ------------------------------------------------------------------- | -------- |
+| `items` | array\<map\> | array of objects with [`insert`](#faiss_vector_store.insert) inputs | ✅       |
 
-  **Parameters**
+#### Outputs
 
-  | Name | Type   | Description                       | Required |
-  | ---- | ------ | --------------------------------- | -------- |
-  | `id` | string | Unique identifier of item to find | ✅       |
+| Name  | Type            | Description                                                     |
+| ----- | --------------- | --------------------------------------------------------------- |
+| `ids` | array\<string\> | Unique identifiers of the added items (same order with `items`) |
 
-  **Outputs**
+`iterative`: **`false`**
 
-  | Name        | Type    | Description                         |
-  | ----------- | ------- | ----------------------------------- |
-  | `id`        | string  | Unique identifier of the found item |
-  | `embedding` | ndarray | Embedding of the found item         |
-  | `document`  | string  | Document of the found item          |
-  | `metadata`  | map     | Metadata of the found item          |
+### `chromadb_vector_store.get_by_id`
 
-- #### ⚡ `retrieve`
+- Type: **Method**
+- Component: `chromadb_vector_store`
 
-  **Parameters**
+Retrieves a stored item by its unique identifier, returning the embedding, document, and metadata.
 
-  | Name              | Type   | Description                           | Required |
-  | ----------------- | ------ | ------------------------------------- | -------- |
-  | `query_embedding` | string | Embedding for query message           | ✅       |
-  | `top_k`           | uint   | Number of results to retrieve at most | ✅       |
+#### Parameters
 
-  **Outputs**
+| Name | Type   | Description                       | Required |
+| ---- | ------ | --------------------------------- | -------- |
+| `id` | string | Unique identifier of item to find | ✅       |
 
-  | Name      | Type         | Description                                                                                                                                                                                                                                                     |
-  | --------- | ------------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-  | `results` | array\<map\> | Retrieved results where each item consists of<br/>`id`(string): Unique identifier of the item<br/>`document`(string): Document of the item<br/>`metadata`(map or null): Metadata of the item<br/>`similarity`(float): cosine similarity between query embedding |
+#### Outputs
 
-- #### ⚡ `remove`
+| Name        | Type    | Description                         |
+| ----------- | ------- | ----------------------------------- |
+| `id`        | string  | Unique identifier of the found item |
+| `embedding` | ndarray | Embedding of the found item         |
+| `document`  | string  | Document of the found item          |
+| `metadata`  | map     | Metadata of the found item          |
 
-  **Parameters**
+`iterative`: **`false`**
 
-  | Name | Type   | Description                         | Required |
-  | ---- | ------ | ----------------------------------- | -------- |
-  | `id` | string | Unique identifier of item to remove | ✅       |
+### `chromadb_vector_store.retrieve`
 
-  **Outputs**
+- Type: **Method**
+- Component: `chromadb_vector_store`
 
-  None
+Searches for the most similar items to the given query embedding. Returns the top-k results along with similarity scores.
 
-- #### ⚡ `clear`
+#### Parameters
 
-  **Parameters**
+| Name              | Type   | Description                           | Required |
+| ----------------- | ------ | ------------------------------------- | -------- |
+| `query_embedding` | string | Embedding for query message           | ✅       |
+| `top_k`           | uint   | Number of results to retrieve at most | ✅       |
 
-  None
+#### Outputs
 
-  **Outputs**
+| Name      | Type         | Description                                                                                                                                                                                                                                                     |
+| --------- | ------------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| `results` | array\<map\> | Retrieved results where each item consists of<br/>`id`(string): Unique identifier of the item<br/>`document`(string): Document of the item<br/>`metadata`(map or null): Metadata of the item<br/>`similarity`(float): cosine similarity between query embedding |
 
-  None
+`iterative`: **`false`**
 
-### ⚡ `split_text` (`split_text_separators_recursively`)
+### `chromadb_vector_store.remove`
 
-**Parameters**
+- Type: **Method**
+- Component: `chromadb_vector_store`
+
+Removes a stored item from the vector store by its unique identifier.
+
+#### Parameters
+
+| Name | Type   | Description                         | Required |
+| ---- | ------ | ----------------------------------- | -------- |
+| `id` | string | Unique identifier of item to remove | ✅       |
+
+#### Outputs
+
+None
+
+`iterative`: **`false`**
+
+### `chromadb_vector_store.clear`
+
+- Type: **Method**
+- Component: `chromadb_vector_store`
+
+Clears all items from the vector store.
+
+#### Parameters
+
+None
+
+#### Outputs
+
+None
+
+`iterative`: **`false`**
+
+## `split_text`
+
+- Type: **Function**
+- Component: `language`
+- Ailas: `split_text_separators_recursively`
+
+#### Parameters
 
 | Name              | Type            | Description                                                                              | Required |
 | ----------------- | --------------- | ---------------------------------------------------------------------------------------- | -------- |
@@ -451,15 +536,20 @@
 | `separators`      | array\<string\> | Separators to use (defaults to `["\n\n", "\n", " ", ""]`)                                |          |
 | `length_function` | string          | Length function to use<br/>Available values: `default`, `string` (defaults to `default`) |          |
 
-**Outputs**
+#### Outputs
 
 | Name     | Type            | Description |
 | -------- | --------------- | ----------- |
 | `chunks` | array\<string\> | Text chunks |
 
-### ⚡ `split_text_by_separator`
+`iterative`: **`false`**
 
-**Parameters**
+## `split_text_by_separator`
+
+- Type: **Function**
+- Component: `language`
+
+#### Parameters
 
 | Name              | Type   | Description                                                                              | Required |
 | ----------------- | ------ | ---------------------------------------------------------------------------------------- | -------- |
@@ -469,8 +559,10 @@
 | `separator`       | string | Separator to use (defaults to `\n\n`)                                                    |          |
 | `length_function` | string | Length function to use<br/>Available values: `default`, `string` (defaults to `default`) |          |
 
-**Outputs**
+#### Outputs
 
 | Name     | Type            | Description |
 | -------- | --------------- | ----------- |
 | `chunks` | array\<string\> | Text chunks |
+
+`iterative`: **`false`**
