--- a/docs/api-references/low-level-runtime-apis.mdx
+++ b/docs/api-references/low-level-runtime-apis.mdx
@@ -396,7 +396,7 @@ A vector store backed by ChromaDB as the underlying storage and retrieval engine
 | `url`        | string | URL of the chromadb server                                | ✅       |
 | `collection` | string | Collection name to use (defaults to `default_collection`) |          |
 
-#### `chromadb_vector_store.insert`<a name="faiss_vector_store.insert"></a>
+### `chromadb_vector_store.insert`<a name="faiss_vector_store.insert"></a>
 
 - Type: **Method**
 - Component: `chromadb_vector_store`
