--- a/docs/tutorial/calling-low-level-apis.mdx
+++ b/docs/tutorial/calling-low-level-apis.mdx
@@ -244,5 +244,7 @@ You can check [Qwen3-0.6B](https://huggingface.co/Qwen/Qwen3-0.6B) model card.
 The input format follows OpenAI's chat API — you can refer to [this page](https://platform.openai.com/docs/guides/text?api-mode=chat) for details.
 For the output format, please refer to the [corresponding documentation](../concepts/agent-response-format).
 
-See [Low-level Runtime APIs](../api-references/low-level-runtime-apis.mdx) for
+:::info
+See [Internal Runtime APIs](../api-references/internal-runtime-apis.mdx) for
 the full list of available APIs.
+:::
