--- a/docs/tutorial/reasoning.mdx
+++ b/docs/tutorial/reasoning.mdx
@@ -43,7 +43,7 @@ process.stdout.write("\n");
 </CodeTabs>
 
 Since reasoning is an internal process, you may not want to include it in the
-output. In such cases, you can use the `ignore_reasoning` option to exclude it
+output. In such cases, you can use the `ignore_reasoning_messages` option to exclude it
 from the output.
 
 <CodeTabs>
