update tutorial explanation flows

--- a/docs/tutorial/calling-low-level-apis.mdx
+++ b/docs/tutorial/calling-low-level-apis.mdx
@@ -1,6 +1,6 @@
 import AiloyInternalSvg from "./img/ailoy-internal.svg";
 
-# Calling low-level APIs
+# Calling Low-Level APIs
 
 As mentioned earlier, the `Agent` is essentially a wrapper around the `Runtime`.
 In a nutshell, a component called the `VM` is responsible for handling
