--- a/docs/tutorial/getting-started.mdx
+++ b/docs/tutorial/getting-started.mdx
@@ -1,117 +1,11 @@
 # Getting started
 
-The very first step to using Ailoy is to start a `Runtime`.
+Welcome to Ailoy’s Tutorial!
 
-<CodeTabs>
+In this tutorial, we’ll explore how to run LLMs in Ailoy, extend their capabilities like agent system.
 
-```python
-from ailoy import Runtime
-
-# The runtime must be started to use Ailoy
-rt = Runtime()
-
-# ... (your code) ...
-
-# Stop the runtime
-rt.stop()
-```
-
-```typescript
-import { startRuntime } from "ailoy-node";
-
-// The runtime must be started to use Ailoy
-const rt = await startRuntime();
-
-// ... (your code) ...
-
-// Stop the runtime
-await rt.stop();
-```
-
-</CodeTabs>
-
-The `Runtime` contains Ailoy’s internal engine. Most of Ailoy’s functionalities
-are processed by this internal engine.
-
-The easiest way to use LLM with Ailoy is working with `Agent` class. The `Agent`
-class provides high-level APIs that abstracts Ailoy’s runtime, allowing you to
-use the functionality of LLM effortlessly. In this example, we’ll use Alibaba's
-[qwen3](https://github.com/QwenLM/Qwen3) with on-device run.
-
-<CodeTabs>
-
-```python
-from ailoy import Agent
-
-# Defines an agent.
-# During this step, the model parameters are downloaded and the LLM is set up for execution
-agent = Agent(rt, model_name="qwen3-0.6b")
-
-# ... (your code) ...
-
-# Once the agent is no longer needed, it can be released
-agent.delete()
-```
-
-```typescript
-import { defineAgent } from "ailoy-node";
-
-// Defines an agent.
-// During this step, the model parameters are downloaded and the LLM is set up for execution
-const agent = await defineAgent(rt, "qwen3-0.6b");
-
-// ... (your code) ...
-
-// Once the agent is no longer needed, it can be released
-await agent.delete();
-```
-
-</CodeTabs>
-
-This process may take some time, as it involves downloading the model
-parameters. Once an Agent is defined, you can run the LLM using the query
-method. The output is returned as an iterator that yields the LLM’s response.
-This can also be considered a single step in successive generation process.
-
-<CodeTabs>
-
-```python
-# This is where the actual LLM call happens.
-for resp in agent.run("Please give me a short poem about AI"):
-    print(resp.content, end='')
-print()
-```
-
-```typescript
-// This is where the actual LLM call happens
-for await (const resp of agent.run("Please give me a short poem about AI")) {
-  process.stdout.write(`${resp.content}`);
-}
-process.stdout.write("\n");
-```
-
-</CodeTabs>
-
-Then, you may see an output similar to this.
-
-<TerminalBox>
-  In the heart of innovation, AI dreams take flight— With thoughts that spark
-  and find their way to light. It learns and creates, no bound, no strain— A
-  world of dreams, where dreams may be found.
-</TerminalBox>
-
-{/* prettier-ignore-start */}
-
-:::note 
-Don't be surprised if the output changes each time you run it. An LLM's
-output includes a certain level of randomness based on the temperature setting.
-:::
-
-{/* prettier-ignore-end */}
-
-All done! You've just activated an LLM. 🎉
-
-Putting it all together, the complete code looks like this:
+Let’s start right away with a simple code example.
+Below is the simplest way to run an LLM — it’s like Ailoy’s “Hello, World!”
 
 <CodeTabs>
 
@@ -121,17 +15,13 @@ from ailoy import Runtime, Agent
 # The runtime must be started to use Ailoy
 rt = Runtime()
 
-# Defines an agent.
+# Defines an agent
 # During this step, the model parameters are downloaded and the LLM is set up for execution
-agent = Agent(rt, model_name="qwen3-0.6b")
-
-# This is where the actual LLM call happens
-for resp in agent.run("Please give me a short poem about AI"):
-    print(resp.content, end='')
-print()
-
-# Once the agent is no longer needed, it can be released
-agent.delete()
+with Agent(rt, model_name="qwen3-0.6b") as agent:
+  # This is where the actual LLM call happens
+  for response in agent.run("Please give me a short poem about AI"):
+      print(response.content, end='')
+  print()
 
 # Stop the runtime
 rt.stop()
@@ -144,12 +34,13 @@ import { startRuntime, defineAgent } from "ailoy-node";
   // The runtime must be started to use Ailoy
   const rt = await startRuntime();
 
+  // Defines an agent
   // During this step, the model parameters are downloaded and the LLM is set up for execution
   const agent = await defineAgent(rt, "qwen3-0.6b");
 
   // This is where the actual LLM call happens
-  for await (const resp of agent.run("Please give me a short poem about AI")) {
-    process.stdout.write(`${resp.content}`);
+  for await (const response of agent.run("Please give me a short poem about AI")) {
+    process.stdout.write(`${response.content}`);
   }
   process.stdout.write("\n");
 
@@ -162,3 +53,105 @@ import { startRuntime, defineAgent } from "ailoy-node";
 ```
 
 </CodeTabs>
+
+Since the model needs to be downloaded and initialized, the first run may take a little time.
+After a short wait, you may see an output similar to this.
+
+<TerminalBox>
+In the digital realm, where thoughts run,  
+AI dreams, no more than dreams of our own.  
+With code and data, it creates, it learns,  
+But dreams, still, run in hearts, in minds.
+</TerminalBox>
+
+All done! You've just activated an LLM. 🎉
+
+{/* prettier-ignore-start */}
+
+:::note 
+Don't be surprised if the output changes each time you run it. An LLM's
+output includes a certain level of randomness based on the temperature setting.
+:::
+
+{/* prettier-ignore-end */}
+
+Now, let me explain through the code line by line to understand what each part does.
+
+The very first step to using Ailoy is to start a Runtime.
+
+<CodeTabs>
+
+```python
+# The runtime must be started to use Ailoy
+rt = Runtime()
+
+# ...
+
+# Stop the runtime
+rt.stop()
+```
+
+```typescript
+// The runtime must be started to use Ailoy
+const rt = await startRuntime();
+
+// ...
+
+// Stop the runtime
+await rt.stop();
+```
+
+</CodeTabs>
+
+The `Runtime` contains Ailoy’s internal engine. Most of Ailoy’s functionalities
+are processed by this internal engine.
+
+<CodeTabs>
+
+```python
+# Defines an agent.
+# During this step, the model parameters are downloaded and the LLM is set up for execution
+with Agent(rt, model_name="qwen3-0.6b") as agent:
+```
+
+```typescript
+// Defines an agent.
+// During this step, the model parameters are downloaded and the LLM is set up for execution
+const agent = await defineAgent(rt, "qwen3-0.6b");
+// ...
+// Once the agent is no longer needed, it can be released
+await agent.delete();
+```
+
+</CodeTabs>
+
+Next, you’ll see that we define a class called `Agent`.
+It is the simplest way to use LLMs (or agents) in Ailoy.
+The `Agent` class provides high-level APIs that abstract away the underlying runtime, allowing you to use LLM capabilities effortlessly.
+In this example, we’re using Alibaba’s [qwen3](https://github.com/QwenLM/Qwen3) to run the model directly on-device.
+
+Once an Agent is defined, you can run the LLM using the query method.
+The output is returned as an iterator that yields the LLM’s response.
+This can also be considered a single step in successive generation process.
+
+<CodeTabs>
+
+```python
+# This is where the actual LLM call happens.
+for response in agent.run("Please give me a short poem about AI"):
+    print(response.content, end='')
+print()
+```
+
+```typescript
+// This is where the actual LLM call happens
+for await (const response of agent.run("Please give me a short poem about AI")) {
+  process.stdout.write(`${response.content}`);
+}
+process.stdout.write("\n");
+```
+
+</CodeTabs>
+
+The response is structured according to Ailoy’s defined output format.
+For a detailed specification of this format, please refer to [Agent Response Format](../concepts/agent-response-format).
