--- a/docs/tutorial/using-tools.mdx
+++ b/docs/tutorial/using-tools.mdx
@@ -1,6 +1,6 @@
 import ToolStructureSvg from "./img/tool-structure.svg";
 
-# Using tools
+# Using Tools
 
 One of the most powerful features in Ailoy is the tool calling system. It allows
 you to extend the capabilities of your LLM by connecting it to external tools or
@@ -11,7 +11,7 @@ decision-making app using real-time exchange rates or stock prices. Moreover,
 the agent can execute financial decisions itself with LLM, enabling powerful
 automation.
 
-## How tool calling works
+## How Tool Calling Works
 
 Let's take a quick look at how tool calling works in general. In most agent
 system, tool calling can be achieved by the following process.
@@ -35,7 +35,120 @@ Now, let's see how to make an agent tool-aware in Ailoy. In this example, we’l
 use the [Frankfurter API](https://frankfurter.dev/) to add real-time exchange
 rate lookup functionality.
 
-The first step is to define a tool.
+<CodeTabs>
+
+```python
+from ailoy import Runtime, Agent
+
+rt = Runtime()
+
+with Agent(rt, model_name="qwen3-8b") as agent:
+    # Attach frankfurter's API
+    agent.add_tools_from_preset("frankfurter")
+
+    question = "I want to buy 250 U.S. Dollar and 350 Chinese Yuan with my Korean Won. How much do I need to take?"
+    for resp in agent.run(question):
+        print(resp.content, end="")
+    print()
+
+rt.stop()
+```
+
+```typescript
+import { startRuntime, defineAgent } from "ailoy-node";
+
+(async () => {
+  const rt = await startRuntime();
+
+  const agent = await defineAgent(rt, "qwen3-8b");
+
+  // Attach frankfurter's API
+  agent.addToolsFromPreset("frankfurter");
+
+  const question = "I want to buy 250 U.S. Dollar and 350 Chinese Yuan with my Korean Won. How much do I need to take?";
+  for await (const resp of agent.run(question)) {
+    process.stdout.write(`${resp.content}`);
+  }
+  process.stdout.write("\n");
+
+  await agent.delete();
+
+  await rt.stop();
+})();
+```
+
+</CodeTabs>
+
+When tools are defined as presets, you can easily inject them into the LLM using the add_tools_from_preset function.
+
+<CodeTabs>
+
+```python
+agent.add_tools_from_preset("frankfurter")
+```
+
+```typescript
+agent.addToolsFromPreset("frankfurter");
+```
+
+</CodeTabs>
+
+You can see that the agent uses the Frankfurters API to incorporate real-time exchange rate information into its response.
+
+Here's what the output will look like:
+
+<TerminalBox>
+{`
+id='call_fe4b76ff-021c-409b-a835-df83b425f35e' type='function' function=ToolCallFunction(name='frankfurter', arguments={'symbols': 'USD,CNY', 'base': 'KRW'})role='tool' name='frankfurter' tool_call_id='call_fe4b76ff-021c-409b-a835-df83b425f35e' content='{"CNY": 0.00516, "USD": 0.00072}'To buy 250 U.S. Dollars (USD) and 350 Chinese Yuan (CNY) using Korean Won (KRW), you need to calculate the total amount of KRW required based on the exchange rates:
+
+- **1 USD = 0.00072 KRW**
+- **1 CNY = 0.00516 KRW**
+
+### Step 1: Calculate KRW for USD
+
+$$
+250 \, \text{USD} \times \frac{1}{0.00072} = 250 \, \text{USD} \times 1388.89
+\approx 347,222 \, \text{KRW}
+$$
+
+### Step 2: Calculate KRW for CNY
+
+$$
+350 \, \text{CNY} \times \frac{1}{0.00516} = 350 \, \text{CNY} \times 193.88
+\approx 67,858 \, \text{KRW}
+$$
+
+### Step 3: Add both amounts
+
+$$ 347,222 \, \text{KRW} + 67,858 \, \text{KRW} = 415,080 \, \text{KRW} $$
+
+### Final Answer:
+
+You need approximately **415,080 Korean Won** to buy 250 USD and 350 CNY. `}
+
+</TerminalBox>
+
+{/* prettier-ignore-start */}
+
+:::warning
+Tools aren't free — every token counts.
+
+Using many tools can generate a large amount of information for the AI to process, resulting in longer context lengths.
+
+Whether you're running AI through external APIs or using on-device models, it consumes resources.
+API usage can lead to unexpectedly high bills, while on-device AI may slow down your machine or even cause it to crash.
+
+Avoid using unnecessary tools. Keep your chat context focused and concise. 
+:::
+
+{/* prettier-ignore-end */}
+
+## Defining Your Own Tool
+
+If the tool what you are looking for doesn't exist, or you want more fine-grained control, you can define your own tool from scratch.
+Ailoy provides a simple API for creating custom tools.
+
+The following example shows how to manually define the Frankfurter API tool we saw earlier.
 
 <CodeTabs>
 
@@ -75,7 +188,7 @@ agent.add_restapi_tool(frankfurter)
 
 ```typescript
 const rt = await startRuntime();
-const agent = await defineAgent(rt, { model: { name: "qwen3-8b" } });
+const agent = await defineAgent(rt, "qwen3-8b");
 
 const frankfurter = {
   type: "restapi",
@@ -117,147 +230,4 @@ to execute the tool. Naturally, the format of the `behavior` depends on its
 type. In this example, since we are using a REST API tool, the behavior includes
 the API’s URL, HTTP method, and headers.
 
-{/* prettier-ignore-start */}
-
-:::info
-For more details about tool definitions, see the [Tools](../concepts/tools) section.
-:::
-
-{/* prettier-ignore-end */}
-
-For the ease of implementation, Ailoy provides presets for several commonly used
-tools, including the Frankfurter API.
-
-If you find a proper tool from preset, you can simply imports it into the agent:
-
-<CodeTabs>
-
-```python
-agent.add_tools_from_preset("frankfurter")
-```
-
-```typescript
-agent.addToolsFromPreset("frankfurter");
-```
-
-</CodeTabs>
-
-By calling `run` function, you can see that the agent uses the Frankfurters API
-to incorporate real-time exchange rate information into its response.
-
-<CodeTabs>
-
-```python
-question = "I want to buy 250 U.S. Dollar and 350 Chinese Yuan with my Korean Won. How much do I need to take?"
-for resp in agent.run(question):
-    print(resp.content, end='')
-print()
-```
-
-```typescript
-const question = "I want to buy 250 U.S. Dollar and 350 Chinese Yuan with my Korean Won. How much do I need to take?";
-for await (const resp in agent.run(question)) {
-  process.stdout.write(resp.content);
-}
-process.stdout.write("\n");
-```
-
-</CodeTabs>
-
-Here's what the output will look like:
-
-<TerminalBox>
-{`
-id='call_fe4b76ff-021c-409b-a835-df83b425f35e' type='function' function=ToolCallFunction(name='frankfurter', arguments={'symbols': 'USD,CNY', 'base': 'KRW'})role='tool' name='frankfurter' tool_call_id='call_fe4b76ff-021c-409b-a835-df83b425f35e' content='{"CNY": 0.00516, "USD": 0.00072}'To buy 250 U.S. Dollars (USD) and 350 Chinese Yuan (CNY) using Korean Won (KRW), you need to calculate the total amount of KRW required based on the exchange rates:
-
-- **1 USD = 0.00072 KRW**
-- **1 CNY = 0.00516 KRW**
-
-### Step 1: Calculate KRW for USD
-
-$$
-250 \, \text{USD} \times \frac{1}{0.00072} = 250 \, \text{USD} \times 1388.89
-\approx 347,222 \, \text{KRW}
-$$
-
-### Step 2: Calculate KRW for CNY
-
-$$
-350 \, \text{CNY} \times \frac{1}{0.00516} = 350 \, \text{CNY} \times 193.88
-\approx 67,858 \, \text{KRW}
-$$
-
-### Step 3: Add both amounts
-
-$$ 347,222 \, \text{KRW} + 67,858 \, \text{KRW} = 415,080 \, \text{KRW} $$
-
-### Final Answer:
-
-You need approximately **415,080 Korean Won** to buy 250 USD and 350 CNY. `}
-
-</TerminalBox>
-
-## Complete Example
-
-<CodeTabs>
-
-```python
-from ailoy import Runtime, Agent
-
-rt = Runtime()
-
-agent = Agent(rt, model_name="qwen3-8b")
-
-# Attach frankfurter's API
-agent.add_tools_from_preset("frankfurter")
-
-question = "I want to buy 250 U.S. Dollar and 350 Chinese Yuan with my Korean Won. How much do I need to take?"
-for resp in agent.run(question):
-    print(resp.content, end="")
-print()
-
-agent.delete()
-
-rt.stop()
-```
-
-```typescript
-import { startRuntime, defineAgent } from "ailoy-node";
-
-(async () => {
-  const rt = await startRuntime();
-
-  const agent = await defineAgent(rt, "qwen3-8b");
-
-  // Attach frankfurter's API
-  agent.addToolsFromPreset("frankfurter");
-
-  const question =
-    "I want to buy 250 U.S. Dollar and 350 Chinese Yuan with my Korean Won. How much do I need to take?";
-  for await (const resp of agent.run(question)) {
-    process.stdout.write(`${resp.content}`);
-  }
-  process.stdout.write("\n");
-
-  await agent.delete();
-
-  await rt.stop();
-})();
-```
-
-</CodeTabs>
-
-{/* prettier-ignore-start */}
-
-:::warning
-Tools aren't free — every token counts.
-
-Using many tools can generate a large amount of information for the AI to process, resulting in longer context lengths.
-
-Whether you're running AI through external APIs or using on-device models, it consumes resources.
-API usage can lead to unexpectedly high bills, while on-device AI may slow down your machine or even cause it to crash.
-
-Avoid using unnecessary tools. Keep your chat context focused and concise. 
-:::
-
-{/* prettier-ignore-end */}
+For the schema of tool definitions, see the [Tools](../concepts/tools) section.
