--- a/docs/tutorial/reasoning.mdx
+++ b/docs/tutorial/reasoning.mdx
@@ -20,7 +20,7 @@ In Ailoy, You can activate it by simply specifying an option:
 <CodeTabs>
 
 ```python
-for resp in agent.run(
+for resp in agent.query(
     "Please solve me a simultaneous equation: x+y=3, 4x+3y=12",
     enable_reasoning=True
 ):
@@ -29,7 +29,7 @@ print()
 ```
 
 ```typescript
-for await (const resp of agent.run(
+for await (const resp of agent.query(
   "Please solve me a simultaneous equation: x+y=3, 4x+3y=12",
   {
     enableReasoning: true,
@@ -49,7 +49,7 @@ from the output.
 <CodeTabs>
 
 ```python
-for resp in agent.run(
+for resp in agent.query(
     "Please solve me a simultaneous equation: x+y=3, 4x+3y=12",
     enable_reasoning=True,
     ignore_reasoning_messages=True
@@ -59,7 +59,7 @@ print()
 ```
 
 ```typescript
-for await (const resp of agent.run(
+for await (const resp of agent.query(
   "Please solve me a simultaneous equation: x+y=3, 4x+3y=12",
   {
     enableReasoning: true,
