--- a/docs/concepts/tools.mdx
+++ b/docs/concepts/tools.mdx
@@ -1,8 +1,12 @@
 # Tools
 
+{/* prettier-ignore-start */}
+
 :::info
 To see the basic usage of tools, refer to **[Using Tools](/docs/tutorial/using-tools)** page.
 :::
+
+{/* prettier-ignore-end */}
 
 In Ailoy, a **tool** allows an agent to access functionality beyond what the base language model can offer, such as real-time data or domain-specific APIs.
 
