--- a/docs/tutorial/using-tools.mdx
+++ b/docs/tutorial/using-tools.mdx
@@ -153,6 +153,8 @@ You can see that the agent uses the Frankfurters API to incorporate real-time ex
 
 Here's what the output will look like:
 
+{/* prettier-ignore-start */}
+
 <TerminalBox>
 {`Question: I want to buy 250 U.S. Dollar and 350 Chinese Yuan with my Korean Won. How much do I need to take?
 
@@ -179,6 +181,7 @@ You will need approximately **414,835.61 KRW** to buy 250 USD and 350 CNY.`}
 
 </TerminalBox>
 
+{/* prettier-ignore-end */}
 {/* prettier-ignore-start */}
 
 :::warning
