--- a/docs/concepts/tools.mdx
+++ b/docs/concepts/tools.mdx
@@ -220,7 +220,7 @@ agent.query("Evaluate sin(pi/2).")
 `I want to know the value of sqrt(3^2 + 4^2).`  
 `Calculate "6/2*(1+2)"`
 
-### Frankfurters (Currency exchange rates)
+### Frankfurter (Currency exchange rates)
 A public API provided by the European Central Bank that provides currency exchange rate information.
 
 You can get exchange rates for one currency against another.
