--- a/docs/tutorial/using-tools.mdx
+++ b/docs/tutorial/using-tools.mdx
@@ -149,7 +149,7 @@ import { startRuntime, defineAgent } from "ailoy-node";
 
 </CodeTabs>
 
-You can see that the agent uses the Frankfurters API to incorporate real-time exchange rate information into its response.
+You can see that the agent uses the Frankfurter API to incorporate real-time exchange rate information into its response.
 
 Here's what the output will look like:
 
