--- a/docs/tutorial/rag-with-vector-store.mdx
+++ b/docs/tutorial/rag-with-vector-store.mdx
@@ -24,7 +24,7 @@ from ailoy import Runtime
 from ailoy.vectorstore import VectorStore
 
 rt = Runtime()
-with VectorStore(rt, "bge-m3", "faiss") as vs:
+with VectorStore(rt, "BAAI/bge-m3", "faiss") as vs:
     ...
 ```
 
@@ -32,7 +32,7 @@ with VectorStore(rt, "bge-m3", "faiss") as vs:
 import { startRuntime, defineVectorStore } from "ailoy-node";
 
 const rt = await startRuntime();
-const vs = await defineVectorStore(rt, "bge-m3", "faiss");
+const vs = await defineVectorStore(rt, "BAAI/bge-m3", "faiss");
 ```
 
 </CodeTabs>
@@ -43,7 +43,7 @@ const vs = await defineVectorStore(rt, "bge-m3", "faiss");
 > the official configuration guide for backend-specific options.
 
 > 💡 **Note:** At this time, the only supported embedding model is
-> [`bge-m3`](https://huggingface.co/BAAI/bge-m3). Additional embedding models
+> [`BAAI/bge-m3`](https://huggingface.co/BAAI/bge-m3). Additional embedding models
 > will be supported in future releases.
 
 ### Inserting Documents into the Vector Store
@@ -156,7 +156,7 @@ rt = Runtime()
 
 # Initialize Agent and VectorStore
 
-with Agent(rt, "qwen3-8b") as agent, VectorStore(rt, "bge-m3", "faiss") as vs:
+with Agent(rt, "Qwen/Qwen3-8B") as agent, VectorStore(rt, "BAAI/bge-m3", "faiss") as vs:
     # Insert items
     vs.insert(
         "Ailoy is a lightweight library for building AI applications",
@@ -188,9 +188,9 @@ async function main() {
   // Initialize Runtime
   const rt = await createRuntime();
   // Initialize Agent
-  const agent = await defineAgent(rt, "qwen3-8b");
+  const agent = await defineAgent(rt, "Qwen/Qwen3-8B");
   // Initialize VectorStore
-  const vs = await defineVectorStore(rt, "bge-m3", "faiss");
+  const vs = await defineVectorStore(rt, "BAAI/bge-m3", "faiss");
 
   // Insert items
   await vs.insert({
