--- a/docs/tutorial/using-tools.mdx
+++ b/docs/tutorial/using-tools.mdx
@@ -42,7 +42,7 @@ from ailoy import Runtime, Agent
 
 rt = Runtime()
 
-with Agent(rt, model_name="qwen3-8b") as agent:
+with Agent(rt, model_name="Qwen/Qwen3-8B") as agent:
     # Attach frankfurter's API
     agent.add_tools_from_preset("frankfurter")
 
@@ -60,7 +60,7 @@ import { startRuntime, defineAgent } from "ailoy-node";
 (async () => {
   const rt = await startRuntime();
 
-  const agent = await defineAgent(rt, "qwen3-8b");
+  const agent = await defineAgent(rt, "Qwen/Qwen3-8B");
 
   // Attach frankfurter's API
   agent.addToolsFromPreset("frankfurter");
@@ -154,7 +154,7 @@ The following example shows how to manually define the Frankfurter API tool we s
 
 ```python
 rt = Runtime()
-agent = Agent(rt, model_name="qwen3-8b")
+agent = Agent(rt, model_name="Qwen/Qwen3-8B")
 
 frankfurter = {
     "type": "restapi",
@@ -188,7 +188,7 @@ agent.add_restapi_tool(frankfurter)
 
 ```typescript
 const rt = await startRuntime();
-const agent = await defineAgent(rt, "qwen3-8b");
+const agent = await defineAgent(rt, "Qwen/Qwen3-8B");
 
 const frankfurter = {
   type: "restapi",
