refactor: use huggingface model id instead of custom id for models (#19)

--- a/docs/tutorial/getting-started.mdx
+++ b/docs/tutorial/getting-started.mdx
@@ -17,7 +17,7 @@ rt = Runtime()
 
 # Defines an agent
 # During this step, the model parameters are downloaded and the LLM is set up for execution
-with Agent(rt, model_name="qwen3-0.6b") as agent:
+with Agent(rt, model_name="Qwen/Qwen3-0.6B") as agent:
     # This is where the actual LLM call happens
     for response in agent.query("Please give me a short poem about AI"):
         print(response.content, end='')
@@ -36,7 +36,7 @@ import { startRuntime, defineAgent } from "ailoy-node";
 
   // Defines an agent
   // During this step, the model parameters are downloaded and the LLM is set up for execution
-  const agent = await defineAgent(rt, "qwen3-0.6b");
+  const agent = await defineAgent(rt, "Qwen/Qwen3-0.6B");
 
   // This is where the actual LLM call happens
   for await (const response of agent.query("Please give me a short poem about AI")) {
@@ -111,13 +111,13 @@ are processed by this internal engine.
 ```python
 # Defines an agent.
 # During this step, the model parameters are downloaded and the LLM is set up for execution
-with Agent(rt, model_name="qwen3-0.6b") as agent:
+with Agent(rt, model_name="Qwen/Qwen3-0.6B") as agent:
 ```
 
 ```typescript
 // Defines an agent.
 // During this step, the model parameters are downloaded and the LLM is set up for execution
-const agent = await defineAgent(rt, "qwen3-0.6b");
+const agent = await defineAgent(rt, "Qwen/Qwen3-0.6B");
 // ...
 // Once the agent is no longer needed, it can be released
 await agent.delete();
